Some fixes related to TestThreadFailure.java