@@ -41,12 +41,25 @@ public class TestThreadFailure {
     static final int SIZE = 1024;
     static final int COUNT = 16;
 
+    static int thread_count = 0;
+
+    static synchronized final int get_thread_id() {
+      return ++thread_count;
+    }
+
     static class NastyThread extends Thread {
         @Override
         public void run() {
             List<Object> root = new ArrayList<Object>();
-            while (true) {
+            int my_thread_id = get_thread_id();
+            String msg = "NastyThread " + my_thread_id + " is shutting down";
+            try {
+              while (true) {
                 root.add(new Object[SIZE]);
+              }
+            } catch (Exception x) {
+              // This is probably a java.lang.OutOfMemoryError exception
+              System.out.println(msg);
             }
         }
     }
@@ -54,9 +67,17 @@ public class TestThreadFailure {
     public static void main(String[] args) throws Exception {
         if (args.length > 0) {
             for (int t = 0; t < COUNT; t++) {
+                // If we experience OutOfMemoryError during our attempt to instantiate NastyThread, we'll abort
+                // main and will not print "All good".  We'll also report a non-zero termination code.  In the 
+                // case that the previously instantiated NastyThread accumulated more than SheanndoahNoProgressThreshold
+                // unproductive GC cycles before failing, the main thread may not try a Full GC before it experiences
+                // OutOfMemoryError exception.
                 Thread thread = new NastyThread();
                 thread.start();
                 thread.join();
+                // Having joined thread, we know the memory consumed by thread is now garbage, and will eventually be
+                // collected.  Some or all of that memory may have been promoted, so we may need to perform a Full GC
+                // in order to reclaim it quickly.
             }
             System.out.println("All good");
             return;
@@ -67,6 +88,7 @@ public class TestThreadFailure {
                     "-Xmx32m",
                     "-XX:+UnlockExperimentalVMOptions",
                     "-XX:+UseShenandoahGC",
+                    "-Xlog:gc*=info",
                     TestThreadFailure.class.getName(),
                     "test");
 
@@ -76,10 +98,15 @@ public class TestThreadFailure {
         }
 
         {
+            // Generational Shenandoah needs a higher value of ShenandaohNoProgressThreshold than traditional
+            // Shenandoah.  This is because Generational Shenandoah may experience many failed young-generation
+            // GC's which degenerate and increment the count of no-progress collections in the same time that a
+            // global collection occurs in traditional Shenandoah.
             ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
                     "-Xmx32m",
-                    "-XX:+UnlockExperimentalVMOptions", "-XX:ShenandoahNoProgressThreshold=12",
+                    "-XX:+UnlockExperimentalVMOptions", "-XX:ShenandoahNoProgressThreshold=24",
                     "-XX:+UseShenandoahGC", "-XX:ShenandoahGCMode=generational",
+                    "-Xlog:gc*=info",
                     TestThreadFailure.class.getName(),
                     "test");
 
